# processWatcher

./: .gitignore  Cargo.lock.old  Cargo.toml  README.md  build.gradle.kts  config.json  install.sh  settings.gradle.kts
.github/workflows/: gradle-publish.yml  rust.yml
cli/: build.gradle.kts
cli/src/main/kotlin/net/tetraowl/processwatcher/cli/: main.kt
cli/src/test/kotlin/net/tetraowl/processwatcher/cli/: MainKtTest.kt
communication/: build.gradle.kts
communication/src/main/kotlin/: ExampleClient.kt  InfoJson.kt  Methods.kt  Responses.kt
deamon/: build.gradle.kts
deamon/src/main/kotlin/: Api.kt  KeepAlive.kt  Utils.kt  main.kt
deamon/src/main/kotlin/api/: Server.kt
deamon/src/main/kotlin/configs/: Config.kt  KeepAliveConfig.kt
deamon/src/test/kotlin/: MainKtTest.kt
info/: api
src/: main.rs  processes.rs  structs.rs
src/main/kotlin/: KeepAlive.kt  Utils.kt  main.kt
src/main/kotlin/configs/: Config.kt  KeepAliveConfig.kt
