[package]
name = "process_watcher"
version = "0.1.0"
authors = ["jonas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.12.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.105"
log = "0.4.8"
env_logger = "0.7.1"
